--- a/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
+++ b/src/BD/AlquilerInterfaz/CRUD_CasaVacacional11.form
@@ -673,9 +673,9 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
-                <StringItem index="0" value="ID Casa"/>
-                <StringItem index="1" value="ID Propiedad"/>
-                <StringItem index="2" value="Nombre"/>
+                <StringItem index="0" value="idCasa"/>
+                <StringItem index="1" value="cedulaPropietario"/>
+                <StringItem index="2" value="nombre"/>
                 <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
